--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
     "globals": "^15.15.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.4",
+    "tailwindcss-animate": "^1.0.7",
     "vite": "^6.2.0"
   }
 }
