--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,50 +1,29 @@
-{ 
+{
   "name": "frontend",
+  "version": "0.0.1",
   "private": true,
-  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
-    "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
-    "@headlessui/react": "^2.2.1",
-    "@heroicons/react": "^2.2.0",
-    "@radix-ui/react-avatar": "^1.1.4",
-    "@radix-ui/react-dialog": "^1.1.7",
-    "@radix-ui/react-dropdown-menu": "^2.1.7",
-    "@radix-ui/react-icons": "^1.3.2",
-    "@radix-ui/themes": "^3.2.1",
+    "@hookform/resolvers": "^5.0.1",
     "axios": "^1.8.4",
-    "clsx": "^2.1.1",
+    "classnames": "^2.5.1",
     "js-cookie": "^3.0.5",
-    "lucide-react": "^0.488.0",
-    "path": "^0.12.7",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.55.0",
-    "react-router-dom": "^7.5.0",
-    "tailwind-merge": "^3.2.0",
-    "tailwind-variants": "^1.0.0",
-    "zod": "^3.24.2"
+    "react-router-dom": "^6.20.1",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.21.0",
-    "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/postcss": "^4.1.4",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9.21.0",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^15.15.0",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.4",
-    "tailwindcss-animate": "^1.0.7",
-    "vite": "^6.2.0"
+    "@vitejs/plugin-react": "^4.4.0",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.2",
+    "vite": "^4.5.0"
   }
 }
