--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "@supabase/supabase-js": "^2.49.4",
     "axios": "^1.8.4",
     "classnames": "^2.5.1",
+    "framer-motion": "^12.7.4",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
