--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,16 +9,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.0.1",
     "@supabase/supabase-js": "^2.49.4",
     "axios": "^1.8.4",
     "classnames": "^2.5.1",
+    "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "framer-motion": "^12.7.4",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.494.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.55.0",
     "react-router-dom": "^6.20.1",
+    "react-toastify": "^11.0.5",
+    "recharts": "^2.15.3",
     "yup": "^1.6.1"
   },
   "devDependencies": {
